Update securty salts

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,11 +14,11 @@ LABEL maintainer="Sergey Alexandrovich <darthsim@gmail.com>"
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
-    bash \
-    ca-certificates \
-    libsm6 \
-    liblzma5 \
-    libzstd1 \
+  bash \
+  ca-certificates \
+  libsm6 \
+  liblzma5 \
+  libzstd1 \
   && rm -rf /var/lib/apt/lists/*
 
 COPY --from=0 /usr/local/bin/imgproxy /usr/local/bin/
@@ -29,6 +29,9 @@ COPY NOTICE /usr/local/share/doc/imgproxy/
 ENV VIPS_WARNING=0
 ENV MALLOC_ARENA_MAX=2
 ENV LD_LIBRARY_PATH /usr/local/lib
+
+ENV IMGPROXY_KEY=736563726574
+ENV IMGPROXY_SALT=68656C6C6F
 
 CMD ["imgproxy"]
 
